--- a/TODO.txt
+++ b/TODO.txt
@@ -19,3 +19,5 @@
          [0:14]: band_id, 两个band_id相同的数据会相互绑定 (0xff)为不绑定
          [15]  : 表示主从数据类型，为1则为主数据，即主数据可以改变从数据，例如电灯开关以及亮度，开关为从数据
                  亮度则为主数据，即开关的状态可以随着亮度的变化而变化，反之则不行。
+
+可以尝试使用 config_client 更新netkey
